Fix z-index issue with table of contents on mobile

--- a/app/assets/stylesheets/shared/base/_variables.scss
+++ b/app/assets/stylesheets/shared/base/_variables.scss
@@ -71,6 +71,8 @@ $base-button-shadow: 0 0 1.5rem rgba($caribbean-green, 0.5);
 $unicode-down-triangle: "\25BE";
 
 // Z-index
-$z-site-nav: 10;
-$z-table-of-contents: 5;
-$z-site-header: 15;
+$z-site-nav-menu-mobile: 5;
+$z-table-of-contents: 10;
+$z-site-nav: 15;
+$z-site-header: 20;
+$z-site-nav-menu: 25;
